# OmniPipe

./: .env.example  .env.template  .gitignore  404.html  README.md  build.py  docker-compose.yml  index.html  mkdocs.yml  nohup.out  omnipipe.bat  omnipipe.sh  pyproject.toml  requirements.txt  search.html  sitemap.xml
.github/workflows/: deploy-wiki.yml
cheatsheet/: index.html
configs/: client_intake_template.yaml  schema.yaml
docs/: cheatsheet.md  index.md  qa_testing_guide.md  test_plan.md
docs/guides/: artist_guide.md  developer_guide.md  td_guide.md  testing_guide.md
docs/setup/: intake_form_reference.md  license_server.md  onboarding.md  pipeline_tools.md  studio_setup_guide.md
docs/walkthroughs/: day_4.md  task_10.md  task_1_2.md  task_3.md  task_4.md  task_5.md  task_6.md  task_7.md  task_8.md  task_9.md
guides/artist_guide/: index.html
guides/developer_guide/: index.html
guides/td_guide/: index.html
guides/testing_guide/: index.html
license_server/: Dockerfile  main.py  requirements.txt
omnipipe/: __main__.py
omnipipe/core/: context.py  dependencies.py  extractors.py  license.py  logger.py  metadata.py  pipeline.py  publish.py  validators.py  versioning.py
omnipipe/dcc/: __init__.py  base.py
omnipipe/services/: kitsu_adapter.py
qa_testing_guide/: index.html
scripts/: generate_license.py  init_studio.py  install_maya_hook.py  install_nuke_hook.py  install_workstation.py  qa_runner.py  serve_wiki.py
search/: search_index.json
setup/intake_form_reference/: index.html
studio_pipe/: __main__.py
test_plan/: index.html
(+23 files in other folders)
